--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "cabbagesquared.me",
   "dependencies": {
     "event-emitter": "^0.3.5",
+    "object-path": "^0.11.4",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
